# kafka-crab-js

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  build.mjs  js-binding.cjs  js-binding.d.ts  js-binding.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
.github/workflows/: CI.yml
__test__/fixtures/: batch-size-findings.md  batch-size-test-data.mjs
__test__/integration/: README.md  batch-size-limits.test.mjs  consumer-manual-commit.test.mjs  consumer-stream-batch-broken.test.mjs  consumer-stream-batch.test.mjs  consumer-stream.test.mjs  consumer.test.mjs  docker-compose.yml  otel.test.mjs  package.json  producer.test.mjs  run-tests.sh  stream-cleanup-simple.test.mjs  stream-cleanup.test.mjs  utils.mjs
__test__/unit/: index.test.mjs  otel.instrumentation.test.mjs  otel.test.mjs
benchmark/: README.md  consumer.ts  package.json
benchmark/utils/: definitions.ts  setup.ts
docs/wiki/: Home.md
example/: batch-usage-examples.mjs
js-src/: index.ts  kafka-client.ts  kafka-stream-readable.ts
js-src/otel/: constants.ts  index.ts  instrumentation.ts  types.ts  utils.ts
js-src/streams/: base-kafka-stream-readable.ts  kafka-batch-stream-readable.ts  kafka-stream-readable.ts
scripts/: kafka-up.sh
src/kafka/: kafka_admin.rs  kafka_client_config.rs  kafka_util.rs
src/kafka/consumer/: consumer_helper.rs  context.rs  kafka_consumer.rs  model.rs
src/kafka/producer/: kafka_producer.rs  model.rs
