[package]
edition = "2021"
name = "kafka-crab-js"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.0.0-beta.8", default-features = false, features = [ "napi9", "napi10", "tokio_rt", "serde-json" ] }
napi-derive = "3.0.0-beta.8"

anyhow = { version = "1.0", features = ["backtrace"] }

rdkafka = { version = "0.37", features = [
    "libz-static",
    "cmake-build",
    "tokio",
    "ssl-vendored"
] }
tokio = { version = "1.45.1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
nanoid = "0.4"

[build-dependencies]
napi-build = "3.0.0-beta.0"

[profile.release]
lto = true
strip = "symbols"
